Update scrollbar and fix initial issues with project cards

--- a/src/css/journey.css
+++ b/src/css/journey.css
@@ -54,6 +54,12 @@
   z-index: -3;
 }
 
+.journey-container {
+  height: 80vh;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
 /*
   ===================
   Project Cards
