--- a/src/css/main.css
+++ b/src/css/main.css
@@ -337,10 +337,10 @@ footer {
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #999;
+  background: #fff;
   border-radius: 0.5em;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: #555;
+  background: #aaa;
 }
